--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 body{
     background-image: url(https://wallpapercave.com/wp/wp7515712.jpg);
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center; 
     margin: 0;
     padding: 0;
 }
@@ -45,4 +47,16 @@ li a{
 }
 li a:hover{
     color: rgb(208, 208, 220);
+}
+footer{
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+}
+.footer-text{
+    color: white;
+    text-align: center;
+    font-family: Verdana, sans-serif;
+    font-size: 14px;
+    text-shadow: 2px 2px 3px black;
 }
